# scibowl-similarity

./: .gitignore  README.md  pyproject.toml
docs/: app.js  duplicate_review.md  index.html
docs/corpus/: biology.questions.json  chemistry.questions.json  earth_space.questions.json  energy.questions.json  manifest.json  math.questions.json  physics.questions.json
src/scibowl/: __init__.py
src/scibowl/cli/: main.py
src/scibowl/dedupe/: __init__.py  browser_bundle.py  candidates.py  embedding_store.py  export.py  review.py  review_app.html  review_server.py  upload_matches.py
src/scibowl/ingest/: __init__.py  mit_csv.py
src/scibowl/schema/: __init__.py  common.py  duplicate.py  question.py
src/scibowl/utils/: ids.py  io.py
tests/: test_browser_bundle.py  test_dedupe.py  test_dedupe_export.py  test_dedupe_review.py  test_embedding_store.py  test_mit_csv.py  test_upload_matches.py
