[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scibowl-similarity"
version = "0.1.0"
description = "Science Bowl duplicate mining and local review workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
embeddings = ["sentence-transformers>=5.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider", "-p", "no:tmpdir"]
